return kennzahlvalues for a batchconfig
